// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input  should render an input 1`] = `
<input
  className="Input-g3kjd9-0 hRmorT"
/>
`;

exports[`Input  should support error 1`] = `
<input
  className="Input-g3kjd9-0 eMGccg"
/>
`;
